--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@
     background-color: rgb(0, 255, 47);
     border-bottom: solid black;
 }
+
 .tab {
     padding: 10px;
     text-decoration: none;
@@ -18,10 +19,12 @@
     border-right: solid black;
 
 }
-.tab:hover{
+
+.tab:hover {
     background-color: red;
 }
-.currentUser{
+
+.currentUser {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,22 +32,44 @@
     padding: 10px;
 
 }
-nav{
+
+nav {
     display: flex;
     color: red;
     background-color: yellow;
 }
 
-@media (max-width:1200px){
-    .header{flex-direction: column;}
-    nav{flex-direction: column;}
-    .tab{width: 100%;
+@media (max-width:1200px) {
+    .header {
+        flex-direction: column;
     }
-    
+
+    nav {
+        flex-direction: column;
+    }
+
+    .tab {
+        width: 100%;
+    }
+
 }
-main{
+
+main {
     display: flex;
     flex-direction: column;
 
 }
 
+form {
+    border: solid black;
+    padding: 5px;
+}
+
+fieldset {
+    padding: 5px;
+}
+
+fieldset>label {
+    margin: 10px;
+    color: red;
+}
